// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`txid.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 254,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 254,
                        "sval": {
                          "sval": "12:13:",
                        },
                      },
                    },
                    "location": 262,
                    "typeName": {
                      "location": 264,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 8 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "12:18:14,16",
                        },
                      },
                    },
                    "location": 21,
                    "typeName": {
                      "location": 23,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 9 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "12:16:14,14",
                        },
                      },
                    },
                    "location": 21,
                    "typeName": {
                      "location": 23,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 19,
                        "sval": {
                          "sval": "31:12:",
                        },
                      },
                    },
                    "location": 27,
                    "typeName": {
                      "location": 29,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "0:1:",
                        },
                      },
                    },
                    "location": 14,
                    "typeName": {
                      "location": 16,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "12:13:0",
                        },
                      },
                    },
                    "location": 17,
                    "typeName": {
                      "location": 19,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 8,
                        "sval": {
                          "sval": "12:16:14,13",
                        },
                      },
                    },
                    "location": 21,
                    "typeName": {
                      "location": 23,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 20,
            "relname": "snapshot_test",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "nr",
                "is_local": true,
                "location": 37,
                "typeName": {
                  "location": 40,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "snap",
                "is_local": true,
                "location": 50,
                "typeName": {
                  "location": 55,
                  "names": [
                    {
                      "String": {
                        "sval": "txid_snapshot",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "snapshot_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 36,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 39,
                          "sval": {
                            "sval": "12:13:",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 23 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "snapshot_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 35,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "12:20:13,15,18",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "snapshot_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 35,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "100001:100009:100005,100007,100008",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 25 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "snapshot_test",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 4,
                          },
                          "location": 35,
                        },
                      },
                      {
                        "A_Const": {
                          "location": 38,
                          "sval": {
                            "sval": "100:150:101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131",
                          },
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 18,
                "relname": "snapshot_test",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nr",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "snap",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 27 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 93,
                "relname": "snapshot_test",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "sortClause": [
            {
              "SortBy": {
                "location": -1,
                "node": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "nr",
                        },
                      },
                    ],
                    "location": 116,
                  },
                },
                "sortby_dir": "SORTBY_DEFAULT",
                "sortby_nulls": "SORTBY_NULLS_DEFAULT",
              },
            },
          ],
          "targetList": [
            {
              "ResTarget": {
                "location": 10,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "snap",
                              },
                            },
                          ],
                          "location": 29,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_snapshot_xmin",
                        },
                      },
                    ],
                    "location": 10,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "snap",
                              },
                            },
                          ],
                          "location": 56,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_snapshot_xmax",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 64,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "snap",
                              },
                            },
                          ],
                          "location": 82,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_snapshot_xip",
                        },
                      },
                    ],
                    "location": 64,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 32 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 53,
                "relname": "snapshot_test",
                "relpersistence": "p",
              },
            },
            {
              "RangeFunction": {
                "alias": {
                  "aliasname": "id",
                },
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 11,
                                  },
                                  "location": 84,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 21,
                                  },
                                  "location": 88,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 68,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 13,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "id",
                              },
                            },
                          ],
                          "location": 38,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "snap",
                              },
                            },
                          ],
                          "location": 42,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_visible_in_snapshot",
                        },
                      },
                    ],
                    "location": 13,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "nr",
                      },
                    },
                  ],
                  "location": 101,
                },
              },
              "location": 104,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 2,
                  },
                  "location": 106,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 69,
                "relname": "snapshot_test",
                "relpersistence": "p",
              },
            },
            {
              "RangeFunction": {
                "alias": {
                  "aliasname": "id",
                },
                "functions": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 90,
                                  },
                                  "location": 100,
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 160,
                                  },
                                  "location": 104,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "generate_series",
                                },
                              },
                            ],
                            "location": 84,
                          },
                        },
                        {},
                      ],
                    },
                  },
                ],
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 25,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "id",
                        },
                      },
                    ],
                    "location": 25,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 29,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "id",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                      {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "snap",
                              },
                            },
                          ],
                          "location": 58,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_visible_in_snapshot",
                        },
                      },
                    ],
                    "location": 29,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "nr",
                      },
                    },
                  ],
                  "location": 118,
                },
              },
              "location": 121,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 4,
                  },
                  "location": 123,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "FuncCall": {
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "txid_current",
                            },
                          },
                        ],
                        "location": 37,
                      },
                    },
                    "location": 52,
                    "name": [
                      {
                        "String": {
                          "sval": ">=",
                        },
                      },
                    ],
                    "rexpr": {
                      "FuncCall": {
                        "args": [
                          {
                            "FuncCall": {
                              "funcformat": "COERCE_EXPLICIT_CALL",
                              "funcname": [
                                {
                                  "String": {
                                    "sval": "txid_current_snapshot",
                                  },
                                },
                              ],
                              "location": 74,
                            },
                          },
                        ],
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "txid_snapshot_xmin",
                            },
                          },
                        ],
                        "location": 55,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 71,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "txid_current",
                              },
                            },
                          ],
                          "location": 96,
                        },
                      },
                      {
                        "FuncCall": {
                          "funcformat": "COERCE_EXPLICIT_CALL",
                          "funcname": [
                            {
                              "String": {
                                "sval": "txid_current_snapshot",
                              },
                            },
                          ],
                          "location": 112,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_visible_in_snapshot",
                        },
                      },
                    ],
                    "location": 71,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 28,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 42,
                        "sval": {
                          "sval": "1000100010001000:1000100010001100:1000100010001012,1000100010001013",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 28,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "1000100010001012",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 53,
                          "sval": {
                            "sval": "1000100010001000:1000100010001100:1000100010001012,1000100010001013",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_visible_in_snapshot",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 53 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 33,
                          "sval": {
                            "sval": "1000100010001015",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 53,
                          "sval": {
                            "sval": "1000100010001000:1000100010001100:1000100010001012,1000100010001013",
                          },
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_visible_in_snapshot",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 32,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 46,
                        "sval": {
                          "sval": "1:9223372036854775807:3",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 32,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 57 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "TypeCast": {
                    "arg": {
                      "A_Const": {
                        "location": 22,
                        "sval": {
                          "sval": "1:9223372036854775808:3",
                        },
                      },
                    },
                    "location": -1,
                    "typeName": {
                      "location": 8,
                      "names": [
                        {
                          "String": {
                            "sval": "txid_snapshot",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 58 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 61 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "NullTest": {
                    "arg": {
                      "FuncCall": {
                        "funcformat": "COERCE_EXPLICIT_CALL",
                        "funcname": [
                          {
                            "String": {
                              "sval": "txid_current_if_assigned",
                            },
                          },
                        ],
                        "location": 8,
                      },
                    },
                    "location": 35,
                    "nulltesttype": "IS_NULL",
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 62 1`] = `[Error: syntax error at or near "\\"]`;

exports[`txid.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 68 1`] = `[Error: syntax error at or near "\\"]`;

exports[`txid.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 72 1`] = `[Error: syntax error at or near "\\"]`;

exports[`txid.sql > line 74 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 76 1`] = `[Error: syntax error at or near "\\"]`;

exports[`txid.sql > line 79 1`] = `[Error: syntax error at or near ":"]`;

exports[`txid.sql > line 80 1`] = `[Error: syntax error at or near ":"]`;

exports[`txid.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 20,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_status",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 81 2`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 54,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 66,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_status",
                        },
                      },
                    ],
                    "location": 54,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 82 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 51,
                "val": {
                  "FuncCall": {
                    "args": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 3,
                          },
                          "location": 63,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "txid_status",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 83 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 88 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateFunctionStmt": {
          "funcname": [
            {
              "String": {
                "sval": "test_future_xid_status",
              },
            },
          ],
          "options": [
            {
              "DefElem": {
                "arg": {
                  "String": {
                    "sval": "plpgsql",
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "language",
                "location": 61,
              },
            },
            {
              "DefElem": {
                "arg": {
                  "List": {
                    "items": [
                      {
                        "String": {
                          "sval": "
BEGIN
  PERFORM txid_status($1);
  RAISE EXCEPTION 'didn''t ERROR at xid in the future as expected';
EXCEPTION
  WHEN invalid_parameter_value THEN
    RAISE NOTICE 'Got expected error for xid in the future';
END;
",
                        },
                      },
                    ],
                  },
                },
                "defaction": "DEFELEM_UNSPEC",
                "defname": "as",
                "location": 78,
              },
            },
          ],
          "parameters": [
            {
              "FunctionParameter": {
                "argType": {
                  "location": 40,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int8",
                      },
                    },
                  ],
                  "typemod": -1,
                },
                "mode": "FUNC_PARAM_DEFAULT",
              },
            },
          ],
          "returnType": {
            "location": 56,
            "names": [
              {
                "String": {
                  "sval": "void",
                },
              },
            ],
            "typemod": -1,
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`txid.sql > line 101 1`] = `[Error: syntax error at or near ":"]`;

exports[`txid.sql > line 102 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;
